# Abendstern

./: .gitignore  Abendstern.awxg  Abendstern.awxs  Abendstern_WGL32.rc  Doxyfile  Makefile.am  Makefile.in  NEWS  README  abendstern.default.rc  abendstern.rc  aclocal.m4  aidesign.txt  alien.txt  apply_update.bat  asgi.txt  bugs.txt  clean  colourmap.txt  config.h  config.h.in  config.status  configure  configure.ac  cortexai.txt  cortexai_graph.dot  create_abendstern_package.sh  create_unix_tgz.sh  funsToReplace  game_modes.txt  gl32funs  gles2funs  libconfigxx_old.tar  lssinfo.rc  networking.txt  newnetworking.txt  patchlevel.rc  regen.sh  resource.h  server.rc  (+6 more)
src/: Makefile.am  Makefile.in  abendstern  abendstern.cxx  abendstern.hxx  abpch.hxx  common.hxx  exit_conditions.hxx  fasttrig.cxx  fasttrig.hxx  fontgen.tcl  globals.cxx  globals.hxx  opto_flags.hxx  run_from_binary_dist.sh  test_state.cxx  test_state.hxx
src/audio/: audio.cxx  audio.hxx  ship_effects.cxx  ship_effects.hxx  ship_effects_common.hxx  ship_mixer.cxx  ship_mixer.hxx  synth.cxx  synth.hxx  ui_sounds.hxx  wavload.cxx  wavload.hxx
src/background/: background.hxx  background_object.cxx  background_object.hxx  explosion.cxx  explosion.hxx  explosion_pool.cxx  explosion_pool.hxx  nebula.cxx  nebula.hxx  old_style_explosion.cxx  old_style_explosion.hxx  planet.cxx  planet.hxx  star.cxx  star.hxx  star_field.cxx  star_field.hxx
src/camera/: camera.cxx  camera.hxx  dynamic_camera.cxx  dynamic_camera.hxx  effects_handler.cxx  effects_handler.hxx  fixed_camera.cxx  fixed_camera.hxx  forwarding_effects_handler.cxx  forwarding_effects_handler.hxx  hud.cxx  hud.hxx  spectator.cxx  spectator.hxx
src/config/: libconfig.cxx  libconfig.h++  libconfig.hxx
src/control/: controller.hxx  genetic_ai.cxx  genetic_ai.hxx  hc_conf.cxx  hc_conf.hxx  human_controller.cxx  human_controller.hxx  joystick.cxx  joystick.hxx
src/control/ai/: aictrl.cxx  aictrl.hxx  aimod.cxx  aimod.hxx  design.txt
src/control/genai/: c_aiming.cxx  c_aiming.hxx  c_avoid_edge.cxx  c_avoid_edge.hxx  c_dodge.cxx  c_dodge.hxx  c_frontal.cxx  c_frontal.hxx  c_navigation.cxx  c_navigation.hxx  c_opp_weapon.cxx  c_opp_weapon.hxx  c_reflex.cxx  c_reflex.hxx  c_run_away.cxx  c_run_away.hxx  c_strat_weapon.cxx  c_strat_weapon.hxx  c_target_analysis.cxx  c_target_analysis.hxx  c_weapon.cxx  c_weapon.hxx  c_weapon_level.cxx  c_weapon_level.hxx  ci_cellex.cxx  ci_cellex.hxx  ci_cellt.cxx  ci_cellt.hxx  ci_emotion.cxx  ci_emotion.hxx  ci_field.cxx  ci_field.hxx  ci_nil.hxx  ci_objective.cxx  ci_objective.hxx  ci_self.cxx  ci_self.hxx  ci_weapon.cxx  ci_weapon.hxx  cortex.cxx  (+3 more)
src/core/: aobject.cxx  aobject.hxx  black_box.cxx  black_box.hxx  game_state.cxx  game_state.hxx  init_state.cxx  init_state.hxx  lxn.cxx  lxn.hxx
src/graphics/: acsgi.cxx  acsgi.hxx  asgi.cxx  asgi.hxx  cmn_shaders.cxx  cmn_shaders.hxx  font.cxx  font.hxx  gl32emu.cxx  gl32emu.hxx  glhelp.cxx  glhelp.hxx  imgload.cxx  imgload.hxx  index_texture.cxx  index_texture.hxx  mat.cxx  mat.hxx  matops.cxx  matops.hxx  shader.cxx  shader.hxx  shader_loader.hxx  square.cxx  square.hxx  vaoemu.cxx  vaoemu.hxx  vec.cxx  vec.hxx
src/net/: abuhops.cxx  abuhops.hxx  antenna.cxx  antenna.hxx  anticipatory_channels.cxx  anticipatory_channels.hxx  async_ack_geraet.cxx  async_ack_geraet.hxx  block_geraet.cxx  block_geraet.hxx  connection_listener.cxx  connection_listener.hxx  crypto.cxx  crypto.hxx  definition.tcl  game_advertiser.cxx  game_advertiser.hxx  game_discoverer.cxx  game_discoverer.hxx  generate.tcl  globalid.cxx  globalid.hxx  io.hxx  lat_disc_geraet.cxx  lat_disc_geraet.hxx  network_appinfo.hxx  network_assembly.cxx  network_assembly.hxx  network_connection.cxx  network_connection.hxx  network_game.cxx  network_game.hxx  network_geraet.hxx  network_test.cxx  network_test.hxx  object_geraet.cxx  object_geraet.hxx  packet_processor.hxx  seq_text_geraet.cxx  seq_text_geraet.hxx  (+10 more)
src/net/xxx/: xnetobj.cxx  xnetobj.hxx
src/secondary/: aggregate_set.hxx  confreg.cxx  confreg.hxx  frame_recorder.cxx  frame_recorder.hxx  global_chat.cxx  global_chat.hxx  light_trail.cxx  light_trail.hxx  namegen.cxx  namegen.hxx  planet_generator.cxx  planet_generator.hxx  validation.hxx  versus_match.cxx  versus_match.hxx
src/ship/: everything.hxx  insignia.cxx  insignia.hxx  physics_bits.hxx  render_quad.cxx  render_quad.hxx  ship.cxx  ship.hxx  ship_image_renderer.cxx  ship_image_renderer.hxx  ship_pallet.hxx  ship_renderer.cxx  ship_renderer.hxx  shipio.cxx  shipio.hxx
src/ship/auxobj/: cell_fragment.cxx  cell_fragment.hxx  plasma_fire.cxx  plasma_fire.hxx  shield.cxx  shield.hxx
src/ship/cell/: cell.cxx  cell.hxx  circle_cell.cxx  circle_cell.hxx  empty_cell.cxx  empty_cell.hxx  equt_cell.cxx  equt_cell.hxx  rightt_cell.cxx  rightt_cell.hxx  square_cell.cxx  square_cell.hxx
src/ship/editor/: abstract_system_painter.cxx  abstract_system_painter.hxx  bridge_relocator.cxx  bridge_relocator.hxx  cell_creation_brush.cxx  cell_creation_brush.hxx  cell_deletion_brush.cxx  cell_deletion_brush.hxx  cell_rotator.cxx  cell_rotator.hxx  editor_design.txt  (+11 more)
src/sim/: blast.cxx  blast.hxx  collision.cxx  collision.hxx  game_env.cxx  game_env.hxx  game_field.cxx  game_field.hxx  game_object.cxx  game_object.hxx  lazy_transform_collision_tree.cxx  lazy_transform_collision_tree.hxx  objdl.hxx  object_intref.cxx  object_intref.hxx
src/tcl_iface/: array.hxx  bridge.cxx  bridge.hxx  common_keyboard_client.cxx  common_keyboard_client.hxx  definition.tcl  dynfun.hxx  dynfun_create_trampolines.hxx  dynfun_list_trampolines.hxx  dynfun_trampolines.tcl  generate.tcl  implementation.cxx  implementation.hxx  include_all_headers.hxx  readme.txt  slave_thread.cxx  slave_thread.hxx  square_icon.cxx  square_icon.hxx
src/weapon/: energy_charge.cxx  energy_charge.hxx  explode_listener.hxx  magneto_bomb.cxx  magneto_bomb.hxx  missile.cxx  missile.hxx  monophasic_energy_pulse.cxx  monophasic_energy_pulse.hxx  particle_beam.cxx  particle_beam.hxx  plasma_burst.cxx  plasma_burst.hxx  semiguided_bomb.cxx  semiguided_bomb.hxx
(+658 files in other folders)
